# zoro-toolkit

./: .replit  main.py  pyproject.toml
config/: config.json
reports/domain/afot.in/20250228_104817/json/: complete_analysis.json  dns_records.json
reports/domain/panimalar.ac.in/20250228_105832/json/: complete_analysis.json  dns_records.json
reports/domain/panimalar.ac.in/20250228_204543/json/: complete_analysis.json  dns_records.json  whois_info.json
src/core/: engine.py
src/modules/: __init__.py  dns_interrogation.py  http_header_analyzer.py  subdomain.py  tech_print.py  waf_detector.py  web_server_fingerprinter.py  whois_lookup.py
src/utils/: banner.py  dns_resolver.py  http_requester.py  logger.py  output_manager.py  rate_limit.py
